[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/dream_diary.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themes/theme0.tres" type="Theme" id=2]
[ext_resource path="res://scripts/load_menu.gd" type="Script" id=3]

[node name="load_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dream_diary" parent="." instance=ExtResource( 1 )]

[node name="panel" type="Panel" parent="."]
margin_left = 1336.0
margin_top = 366.0
margin_right = 1828.0
margin_bottom = 738.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seed_prompt" type="LineEdit" parent="."]
margin_left = 1362.0
margin_top = 395.0
margin_right = 1804.0
margin_bottom = 440.0
text = "enter a seed"
max_length = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paste_button" type="Button" parent="."]
margin_left = 1362.0
margin_top = 464.0
margin_right = 1804.0
margin_bottom = 509.0
text = "paste from clipboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="random_button" type="Button" parent="."]
margin_left = 1362.0
margin_top = 533.297
margin_right = 1804.0
margin_bottom = 578.297
text = "random seed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="."]
margin_left = 1362.0
margin_top = 603.297
margin_right = 1804.0
margin_bottom = 648.297
text = "load dream"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
margin_left = 1362.0
margin_top = 670.0
margin_right = 1804.0
margin_bottom = 715.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="paste_button" to="." method="_paste_pressed"]
[connection signal="pressed" from="random_button" to="." method="_random_pressed"]
[connection signal="pressed" from="load_button" to="." method="_load_pressed"]
[connection signal="pressed" from="back_button" to="." method="_back_pressed"]
